# orbit_pyqtgraph

./: LICENSE  README.md  pyproject.toml  quick-start.py  requirements.txt  setup.py
examples/: 2d.py  2d_animation.py  3d.py  3d_animation.py  all.py
orbit_pyqtgraph/: __init__.py  orb_math.py  orbit.py
orbit_pyqtgraph/assets/: arch1.py  arch2.py
